--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.+'
     compile 'com.android.support:palette-v7:23.0.0'
     compile 'com.squareup.picasso:picasso:2.5.0'
+    compile 'com.google.android.gms:play-services:6.5.+'
 }
