--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.materialngo" >
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,11 +22,24 @@
             </intent-filter>
         </activity>
 
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyATZ1MiNBGSQI3oYt78T2eILKoBUKom_y4">
+        </meta-data>
+
         <activity
             android:name=".DetailActivity"
             android:screenOrientation="portrait">
         </activity>
 
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
+    <uses-permission android:name="com.google.android.providers.gsf.permissions.READ_GSERVICES"></uses-permission>
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_COARSE_LOCATION"></uses-permission>
+    <uses-permission android:name="ANDROID.PERMISSION.ACCESS_FINE_LOCATION"></uses-permission>
 
 </manifest>
